--- a/CFMOS/CFMOS/CFMOS.csproj
+++ b/CFMOS/CFMOS/CFMOS.csproj
@@ -122,6 +122,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Areas\Administrator\AdministratorAreaRegistration.cs" />
     <Compile Include="Areas\Administrator\Controllers\DashboardController.cs" />
+    <Compile Include="Areas\Administrator\Controllers\LoginController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -131,6 +132,12 @@
   <ItemGroup>
     <Content Include="Assets\Images\b.jpg" />
     <Content Include="Assets\Images\close-icon.svg" />
+    <Content Include="Assets\Images\cook_01.jpg" />
+    <Content Include="Assets\Images\cook_02.jpg" />
+    <Content Include="Assets\Images\cook_breakfast.png" />
+    <Content Include="Assets\Images\cook_dessert.png" />
+    <Content Include="Assets\Images\cook_dinner.png" />
+    <Content Include="Assets\Images\cook_lunch.png" />
     <Content Include="Assets\Images\FoodItems\Beverages\apple.jpeg" />
     <Content Include="Assets\Images\FoodItems\Beverages\bananashake.jpg" />
     <Content Include="Assets\Images\FoodItems\Beverages\caffe-latte-edwardtanujayaa-1567151330.jpg" />
@@ -235,6 +242,9 @@
     <Content Include="Assets\Images\FoodItems\Soups\Potluck-Chicken-Vegetable-Soup.jpg" />
     <Content Include="Assets\Images\FoodItems\Soups\salmon-noodle-soup.jpg" />
     <Content Include="Assets\Images\FoodItems\Soups\tomato.jpg" />
+    <Content Include="Assets\Images\login.jpg" />
+    <Content Include="Assets\Images\rice.png" />
+    <Content Include="Assets\Images\spoon.jpg" />
     <Content Include="Assets\Images\team\Eisha.jpg" />
     <Content Include="Assets\Images\team\Khansa.jpg" />
     <Content Include="Assets\Images\team\muskan.png" />
@@ -247,7 +257,9 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\font-awesome.min.css" />
     <Content Include="Content\main.css" />
+    <Content Include="Content\main2.css" />
     <Content Include="Content\styles.css" />
+    <Content Include="Content\templatemo-style.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
@@ -271,7 +283,12 @@
     <Content Include="Assets\Images\FoodItems\Punjabi\Kadhai.jpg" />
     <Content Include="Assets\Images\FoodItems\Punjabi\paneer-tikka.jpg" />
     <Content Include="Assets\Images\FoodItems\Punjabi\saag and makki ki roti.jpg" />
+    <Content Include="Areas\Administrator\Views\Shared\Login.cshtml" />
+    <Content Include="Areas\Administrator\Views\Login\Index.cshtml" />
+    <Content Include="Areas\Administrator\Views\Login\About.cshtml" />
+    <Content Include="Areas\Administrator\Views\Login\Contact.cshtml" />
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\global.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
@@ -287,6 +304,40 @@
     <Content Include="Scripts\modernizr-2.8.3.js" />
     <Content Include="Scripts\scripts.js" />
     <Content Include="Scripts\skel.min.js" />
+    <Content Include="Scripts\vendor\animate.css\animate.compat.css" />
+    <Content Include="Scripts\vendor\animate.css\animate.css" />
+    <Content Include="Scripts\vendor\animate.css\animate.min.css" />
+    <Content Include="Scripts\vendor\aos\aos.css" />
+    <Content Include="Scripts\vendor\aos\aos.js" />
+    <Content Include="Scripts\vendor\bootstrap\css\bootstrap-grid.css" />
+    <Content Include="Scripts\vendor\bootstrap\css\bootstrap-grid.min.css" />
+    <Content Include="Scripts\vendor\bootstrap\css\bootstrap-reboot.css" />
+    <Content Include="Scripts\vendor\bootstrap\css\bootstrap-reboot.min.css" />
+    <Content Include="Scripts\vendor\bootstrap\js\bootstrap.bundle.js" />
+    <Content Include="Scripts\vendor\bootstrap\js\bootstrap.bundle.min.js" />
+    <Content Include="Scripts\vendor\bootstrap\css\bootstrap.css" />
+    <Content Include="Scripts\vendor\bootstrap\js\bootstrap.js" />
+    <Content Include="Scripts\vendor\bootstrap\css\bootstrap.min.css" />
+    <Content Include="Scripts\vendor\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Scripts\vendor\datepicker\daterangepicker.css" />
+    <Content Include="Scripts\vendor\datepicker\daterangepicker.js" />
+    <Content Include="Scripts\vendor\datepicker\moment.min.js" />
+    <Content Include="Scripts\vendor\fontawosome\font-awesome.css" />
+    <Content Include="Scripts\vendor\fontawosome\font-awesome.min.css" />
+    <Content Include="Scripts\vendor\fontawosome\fonts\fontawesome-webfont.svg" />
+    <Content Include="Scripts\vendor\icofont\icofont.min.css" />
+    <Content Include="Scripts\vendor\jquery.easing\jquery.easing.min.js" />
+    <Content Include="Scripts\vendor\jquery\jquery.js" />
+    <Content Include="Scripts\vendor\jquery\jquery.min.js" />
+    <Content Include="Scripts\vendor\mdifont\material-design-iconic-font.css" />
+    <Content Include="Scripts\vendor\mdifont\material-design-iconic-font.min.css" />
+    <Content Include="Scripts\vendor\mdifont\Material-Design-Iconic-Font.svg" />
+    <Content Include="Scripts\vendor\select2\select2.min.css" />
+    <Content Include="Scripts\vendor\select2\select2.min.js" />
+    <Content Include="Scripts\vendor\venobox\venobox.css" />
+    <Content Include="Scripts\vendor\venobox\venobox.js" />
+    <Content Include="Scripts\vendor\venobox\venobox.min.css" />
+    <Content Include="Scripts\vendor\venobox\venobox.min.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -302,6 +353,28 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Areas\Administrator\Views\Shared\MainPage.cshtml" />
+    <Content Include="Scripts\vendor\fontawosome\fonts\fontawesome-webfont.eot" />
+    <Content Include="Scripts\vendor\fontawosome\fonts\fontawesome-webfont.ttf" />
+    <Content Include="Scripts\vendor\fontawosome\fonts\fontawesome-webfont.woff" />
+    <Content Include="Scripts\vendor\fontawosome\fonts\fontawesome-webfont.woff2" />
+    <Content Include="Scripts\vendor\fontawosome\fonts\FontAwesome.otf" />
+    <Content Include="Scripts\vendor\mdifont\Material-Design-Iconic-Font.eot" />
+    <Content Include="Scripts\vendor\mdifont\Material-Design-Iconic-Font.ttf" />
+    <Content Include="Scripts\vendor\mdifont\Material-Design-Iconic-Font.woff" />
+    <Content Include="Scripts\vendor\mdifont\Material-Design-Iconic-Font.woff2" />
+    <Content Include="Scripts\vendor\bootstrap\js\bootstrap.bundle.js.map" />
+    <Content Include="Scripts\vendor\bootstrap\js\bootstrap.bundle.min.js.map" />
+    <Content Include="Scripts\vendor\bootstrap\js\bootstrap.js.map" />
+    <Content Include="Scripts\vendor\bootstrap\js\bootstrap.min.js.map" />
+    <Content Include="Scripts\vendor\bootstrap\css\bootstrap-grid.css.map" />
+    <Content Include="Scripts\vendor\bootstrap\css\bootstrap-grid.min.css.map" />
+    <Content Include="Scripts\vendor\bootstrap\css\bootstrap-reboot.css.map" />
+    <Content Include="Scripts\vendor\bootstrap\css\bootstrap-reboot.min.css.map" />
+    <Content Include="Scripts\vendor\bootstrap\css\bootstrap.css.map" />
+    <Content Include="Scripts\vendor\bootstrap\css\bootstrap.min.css.map" />
+    <Content Include="Scripts\vendor\icofont\fonts\icofont.woff" />
+    <Content Include="Scripts\vendor\icofont\fonts\icofont.woff2" />
+    <Content Include="Scripts\vendor\jquery\jquery.min.map" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
