--- a/Online-Food-Ordering-System-master/Web.config
+++ b/Online-Food-Ordering-System-master/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <connectionStrings>
-    <add name="ConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\ofos.mdf;Integrated Security=True"
+    <add name="ConnectionString" connectionString="Data Source=NAMRARATHORE\MSSQLSERVER01;AttachDbFilename=|DataDirectory|\ofos.mdf;Integrated Security=True"
       providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
