--- a/Online-Food-Ordering-System-master/CFMOS.csproj
+++ b/Online-Food-Ordering-System-master/CFMOS.csproj
@@ -115,17 +115,135 @@
     <Content Include="assets\form-validation.css" />
     <Content Include="assets\Images\b.jpg" />
     <Content Include="assets\Images\cappuccino-coffee-cup.jpg" />
+    <Content Include="assets\Images\close-icon.svg" />
     <Content Include="assets\Images\cook_01.jpg" />
     <Content Include="assets\Images\cook_02.jpg" />
     <Content Include="assets\Images\cook_breakfast.png" />
     <Content Include="assets\Images\cook_dessert.png" />
     <Content Include="assets\Images\cook_dinner.png" />
     <Content Include="assets\Images\cook_lunch.png" />
+    <Content Include="assets\Images\FoodItems\Beverages\apple.jpeg" />
+    <Content Include="assets\Images\FoodItems\Beverages\bananashake.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\caffe-latte-edwardtanujayaa-1567151330.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\cappuccino-coffee-cup.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\carrot-juice-1296x728-header.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\chocolateshake.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\Classic-Homemade-Lemonade-IG.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\coca-cola.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\espreso.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\grape-juice.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\juice-box-packaging-500x500.png" />
+    <Content Include="assets\Images\FoodItems\Beverages\long black%28americano%29.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\main.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\Mango-Juice-2.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\Mango-Shake.jpeg" />
+    <Content Include="assets\Images\FoodItems\Beverages\mocha-1567151479.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\orange.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\pineapple-drink-500x500.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\promoright_1.png" />
+    <Content Include="assets\Images\FoodItems\Beverages\strawberry-juice-recipe.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\Strawberry-Milkshake-5.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\tandurichai.jpg" />
+    <Content Include="assets\Images\FoodItems\Beverages\tea.jpg" />
+    <Content Include="assets\Images\FoodItems\Chinese\chickenandvegespeghetie.jpg" />
+    <Content Include="assets\Images\FoodItems\Chinese\chilli-chicken-recipe-500x500.jpg" />
+    <Content Include="assets\Images\FoodItems\Chinese\Chowmein.jpg" />
+    <Content Include="assets\Images\FoodItems\Chinese\fried-rice-food.jpg" />
+    <Content Include="assets\Images\FoodItems\Chinese\main.jpg" />
+    <Content Include="assets\Images\FoodItems\Chinese\Manchurian-Recipe-blog-1-of-1.jpg" />
+    <Content Include="assets\Images\FoodItems\Chinese\ricebowl.jpg" />
+    <Content Include="assets\Images\FoodItems\Chinese\springrolls.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\Best-Platter-Chicken-Shawarma-Recipe.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\chicken-burger-recipe-500x500.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\Chicken-Fajita-Pizza7.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\Chicken-Shawarma-Final-1.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\Chicken-Tikka-Wrap-.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\chicken-zinger-500x500.png" />
+    <Content Include="assets\Images\FoodItems\junkFood\CHICKEN_TIKKA_BURGER-1.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\classic-beef-burger.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\crust pizza.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\donuts.png" />
+    <Content Include="assets\Images\FoodItems\junkFood\frenchfries.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\Best-Platter-Chicken-Shawarma-Recipe.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\chicken-burger-recipe-500x500.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\Chicken-Fajita-Pizza7.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\Chicken-Shawarma-Final-1.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\Chicken-Tikka-Wrap-.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\chicken-zinger-500x500.png" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\CHICKEN_TIKKA_BURGER-1.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\classic-beef-burger.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\crust pizza.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\donuts.png" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\frenchfries.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\nugets.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\pan pizza.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\pumpkin-veggie-burger.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\sandwich.jpeg" />
+    <Content Include="assets\Images\FoodItems\junkFood\full\zinger-shawarma.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\main.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\nugets.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\pan pizza.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\pumpkin-veggie-burger.jpg" />
+    <Content Include="assets\Images\FoodItems\junkFood\sandwich.jpeg" />
+    <Content Include="assets\Images\FoodItems\junkFood\zinger-shawarma.jpg" />
+    <Content Include="assets\Images\FoodItems\NoodlesRice\cup-noodle-fried-rice.jpg" />
+    <Content Include="assets\Images\FoodItems\NoodlesRice\cup-noodle-fried-rice1.jpg" />
+    <Content Include="assets\Images\FoodItems\NoodlesRice\garlic-rice-noodles.jpg" />
+    <Content Include="assets\Images\FoodItems\NoodlesRice\garlicRiceNoodles.jpg" />
+    <Content Include="assets\Images\FoodItems\NoodlesRice\main.jpg" />
+    <Content Include="assets\Images\FoodItems\NoodlesRice\Noodle-Rice-Pilaf.jpg" />
+    <Content Include="assets\Images\FoodItems\NoodlesRice\rice-and-vermicillie-noodles.jpg" />
+    <Content Include="assets\Images\FoodItems\NoodlesRice\Rice-noodles-10.jpg" />
+    <Content Include="assets\Images\FoodItems\NoodlesRice\riceNoodlesWith-brocliiand-bellpepper.jpg" />
+    <Content Include="assets\Images\FoodItems\NoodlesRice\Singapore-Rice-Noodles.jpg" />
+    <Content Include="assets\Images\FoodItems\NoodlesRice\Stir-Fry-Recipe-with-Chicken-and-Rice-Noodles.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\Aloo-Paratha-620.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\biryani.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\chicken-butter.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\chickenkrahi.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\chole-bhature.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\Kadhai.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\kunnaGosht.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\main.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\Murgh-cholay.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\pakoda kadhai.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\paneer-tikka.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\paye.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\prantha.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\pulao.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\saag and makki ki roti.jpg" />
+    <Content Include="assets\Images\FoodItems\Punjabi\Tandoori-Chicken-1-3.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\beefandbarley.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\beercheesesoup.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\Chicken-Tortilla-Soup.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\chickenNoodleSoup.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\chickenshaslick.png" />
+    <Content Include="assets\Images\FoodItems\Soups\chickensoup.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\ciopinno.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\Creamy-Butternut-Soup.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\Egg-Drop-Soup.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\englandclamchowder.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\Homemade-Chicken-and-Rice-Soup.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\hot and sour soup.png" />
+    <Content Include="assets\Images\FoodItems\Soups\italianwedding.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\main.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\minestrone.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\Navy-Bean-Soup.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\noodlesoup.png" />
+    <Content Include="assets\Images\FoodItems\Soups\Potluck-Chicken-Vegetable-Soup.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\salmon-noodle-soup.jpg" />
+    <Content Include="assets\Images\FoodItems\Soups\tomato.jpg" />
     <Content Include="assets\Images\login.jpg" />
+    <Content Include="assets\Images\team\Eisha.jpg" />
+    <Content Include="assets\Images\team\Khansa.jpg" />
+    <Content Include="assets\Images\team\muskan.png" />
+    <Content Include="assets\main.css" />
     <Content Include="assets\Images\Mango-Shake.jpeg" />
     <Content Include="assets\Images\orange.jpg" />
     <Content Include="assets\Images\spoon.jpg" />
     <Content Include="assets\Images\Strawberry-Milkshake-5.jpg" />
+    <Content Include="assets\styles.css" />
+    <Content Include="assets\templatemo-style.css" />
     <Content Include="bin\Microsoft.AI.Agent.Intercept.dll" />
     <Content Include="bin\Microsoft.AI.DependencyCollector.dll" />
     <Content Include="bin\Microsoft.AI.DependencyCollector.xml" />
